# traced

./: .gitignore  .gitmodules  BVH.cpp  BVH.h  CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  Controller.h  HitData.h  Hitable.cpp  Hitable.h  Imaging.cpp  Imaging.h  LICENSE  Light.cpp  Light.h  Material.cpp  Material.h  Math.cpp  Math.h  Matrix44.cpp  Matrix44.h  Parser.cpp  Parser.h  PixelBuffer.cpp  PixelBuffer.h  Polygon.cpp  Polygon.h  PolygonMesh.cpp  PolygonMesh.h  README.md  Ray.h  RayTracer.sln  RayTracer.vcxproj  RayTracer.vcxproj.filters  RenderPrimitive.cpp  RenderPrimitive.h  Renderable.cpp  Renderable.h  (+17 more)
Testing/: Testing.vcxproj  pch.h  test.cpp
UnitTests/: UnitTests.vcxproj  test.cpp
source/: main.cpp
source/acceleration/: aabb.cpp  aabb.hpp  bounds.cpp  bounds.hpp  bvh.cpp  bvh.hpp
source/core/: intersection.cpp  intersection.hpp  renderer.cpp  renderer.hpp  sampler.cpp  sampler.hpp  scene.cpp  scene.hpp
source/geometry/: bounds.cpp  bounds.hpp  mesh.cpp  mesh.hpp  triangle.cpp  triangle.hpp
source/imaging/: Color3.hpp  Light.hpp  camera.cpp  camera.hpp  color3.hpp  image_buffer.cpp  image_buffer.hpp  light.cpp  light.hpp
source/material/: BSDF.cpp  BSDF.hpp  bsdf.cpp  bsdf.hpp  disney.cpp  disney.hpp  distributions.cpp  distributions.hpp  emissive.hpp  material.cpp  material.hpp
source/math/: Matrix4x4.hpp  Normal3.hpp  ONB.cpp  ONB.h  Point2.hpp  Point3.hpp  Ray.hpp  Vec2.hpp  Vec3.hpp  math_util.cpp  math_util.hpp  matrix4x4.hpp  normal3.hpp  onb.cpp  onb.hpp  point2.hpp  point3.hpp  ray.hpp  transform.cpp  transform.hpp  vec2.hpp  vec3.hpp
source/utility/: parser.cpp  parser.hpp  utility.hpp  window.cpp  window.hpp
src/: BSDF.cpp  BSDF.h  BVH.cpp  BVH.h  BoundingVolume.cpp  BoundingVolume.h  CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  Controller.h  HitData.h  Imaging.cpp  Imaging.h  Integrator.cpp  Integrator.h  Intersection.cpp  Intersection.h  Light.cpp  Light.h  Material.cpp  Material.h  MathUtil.cpp  MathUtil.h  Matrix44.h  Mesh.cpp  Mesh.h  Parser.cpp  Parser.h  Pixel.cpp  Pixel.h  Polygon.cpp  Polygon.h  PolygonMesh.cpp  PolygonMesh.h  Ray.h  RenderMode.cpp  RenderMode.h  Renderable.cpp  Renderable.h  (+21 more)
src/Acceleration/: BVH.cpp  BVH.hpp  BoundingVolume.cpp  BoundingVolume.hpp
src/Core/: Intersection.cpp  Intersection.hpp  Renderer.cpp  Renderer.hpp  Sampler.hpp  Scene.cpp  Scene.hpp
src/Geometry/: Mesh.cpp  Mesh.hpp  Triangle.cpp  Triangle.hpp
src/Imaging/: Camera.cpp  Camera.hpp  Color3.hpp  ImageBuffer.cpp  ImageBuffer.hpp  Light.hpp
src/Material/: BSDF.cpp  BSDF.hpp  Material.cpp  Material.hpp
src/Math/: MathUtil.cpp  MathUtil.hpp  Matrix4x4.hpp  Normal3.hpp  Point2.hpp  Point3.hpp  Ray.hpp  Transform.cpp  Transform.hpp  Vec2.hpp  Vec3.hpp
src/Utility/: Parser.cpp  Parser.hpp  Utility.hpp  Window.cpp  Window.hpp
src/acceleration/: aabb.cpp  aabb.hpp  bounds.cpp  bounds.hpp  bvh.cpp  bvh.hpp
src/core/: intersection.cpp  intersection.hpp  renderer.cpp  renderer.hpp  sampler.cpp  sampler.hpp  scene.cpp  scene.hpp
src/geometry/: mesh.cpp  mesh.hpp  ray.hpp  triangle.cpp  triangle.hpp
src/imaging/: Color3.hpp  camera.cpp  camera.hpp  image_buffer.cpp  image_buffer.hpp
src/material/: disney.hpp  emissive.cpp  material.cpp  material.hpp
src/math/: Point2.hpp  Ray.hpp  Vec3.hpp  math_util.cpp  onb.hpp  transform.cpp  transform.hpp
src/utility/: parser.cpp  parser.hpp  utility.hpp  window.cpp  window.hpp
test/: CMakeLists.txt
test/unit_tests/: CMakeLists.txt  test_example.cpp
x64/Debug/: RayTracer.ilk  vc141.idb
x64/Debug/RayTracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RayTracer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
